# media-streaming-events

./: .gitignore  README.md  main.py  pyproject.toml
media_pipeline/: sample_data.py
media_pipeline/pipeline/: constants.py  consumer.py  domain.py  event_parser.py  models.py  processor.py  session.py  writer.py
media_pipeline/tests/: conftest.py  test_consumer.py  test_models.py  test_processor.py  test_session.py  test_writer.py
