[project]
name = "funnelfuel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.12.5",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "pyrefly>=0.55.0",
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.5",
]
