[project]
name = "funnelfuel"
version = "0.1.0"
description = "media streaming batch processing pipeline"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.12.5",
    "structlog>=25.5.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = [
    "--cov",
]

[dependency-groups]
dev = [
    "prek>=0.3.4",
    "pyrefly>=0.55.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
    "time-machine>=3.2.0",
]

[tool.pyright]
typeCheckingMode = "standard"
reportUnnecessaryTypeIgnoreComment = "error"
venv = ".venv"
venvPath = "."
exclude = [".venv"]

[tool.ruff.lint]
# Add flake8-bugbear (`B`) rules, in addition to the defaults. Add (`I`) for sorting imports.
extend-select = ["B", "I"]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
branch = false
source = ["."]
omit = ["**/tests/**", "main.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true
